feat: Add evaluation and inference scripts for task automation
- Implemented `run-evaluation.ts` to apply model fixes and run tests, recording results.
- Created `run-inference.ts` to send buggy code to the model and save responses.
- Enhanced `test-solutions.ts` to log results, skip completed tasks, and provide detailed error tracking.
- Added JSON logging for benchmark results.
- Updated tasks with inference responses and fixed code for shell injection vulnerabilities.
- Improved security in shell command handling by using safe interpolation and Bun's native APIs.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test:all": "for dir in tasks/task-*; do echo \"Testing $dir...\"; cd $dir && bun test 2>/dev/null || true; cd ../..; done",
     "test:solutions": "bun run scripts/test-solutions.ts",
     "validate": "bun run scripts/validate-tasks.ts",
-    "list": "ls -1 tasks/"
+    "list": "ls -1 tasks/",
+    "benchmark": "bun run scripts/benchmark.ts",
+    "inference": "bun run scripts/run-inference.ts",
+    "evaluate": "bun run scripts/run-evaluation.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
